--- a/higgs-pred/hparams/check.yaml
+++ b/higgs-pred/hparams/check.yaml
@@ -1,4 +1,7 @@
-n_epochs: 10
-batch_size: 128
-lr: 0.01
-true_cutoff: 0.5
+model:
+  lr: 0.01
+  true_cutoff: 0.5
+
+trainer:
+  batch_size: 12
+  n_epochs: 5
