--- a/higgs-pred/higgs.yaml
+++ b/higgs-pred/higgs.yaml
@@ -12,7 +12,7 @@ app:
 
 split:
   infilepath: ${app.dataroot}/${app.data_csv}
-  path: ${app.dataroot}/${app.project}
+  path: ${app.dataroot}
   train_csv: ${app.train_csv}
   test_csv: ${app.test_csv}
   train_test_split_frac: 0.9
